[gd_scene load_steps=9 format=3 uid="uid://conqjasembnyk"]

[ext_resource type="Script" uid="uid://dvot36t2tpfej" path="res://smol_character_body.gd" id="1_jhqs5"]
[ext_resource type="PackedScene" uid="uid://vm6hp0etitle" path="res://smol.tscn" id="1_xfcub"]
[ext_resource type="Script" uid="uid://bgmg6422npasl" path="res://jump.gd" id="3_2h5ot"]
[ext_resource type="Script" uid="uid://dcbn74vtwbbnf" path="res://double_jump.gd" id="4_g6x73"]
[ext_resource type="Script" uid="uid://cavlxkrmdai1f" path="res://dive.gd" id="5_g6x73"]
[ext_resource type="Script" uid="uid://du4vqmggflnnm" path="res://roll.gd" id="6_o2wkx"]
[ext_resource type="Script" uid="uid://br4r8futwbapp" path="res://wall_bonk.gd" id="7_wcu5x"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jhqs5"]
radius = 0.35

[node name="SmolCharacterBody" type="CharacterBody3D" node_paths=PackedStringArray("model_scene")]
script = ExtResource("1_jhqs5")
model_scene = NodePath("smol")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "State: IDLE"

[node name="DoubleJumpLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Can Double Jump: TRUE"

[node name="DiveLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Can Dive: TRUE"

[node name="smol" parent="." node_paths=PackedStringArray("character_controller") instance=ExtResource("1_xfcub")]
character_controller = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.350267, 0)
shape = SubResource("SphereShape3D_jhqs5")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 0.885507, 0.464626, 0, -0.464626, 0.885507, 0, 2.49422, 4)

[node name="Jump" type="Node" parent="."]
script = ExtResource("3_2h5ot")

[node name="DoubleJump" type="Node" parent="."]
script = ExtResource("4_g6x73")

[node name="Dive" type="Node" parent="."]
script = ExtResource("5_g6x73")

[node name="Roll" type="Node" parent="."]
script = ExtResource("6_o2wkx")

[node name="WallBonk" type="Node" parent="."]
script = ExtResource("7_wcu5x")
